    <resources>
    <string name="app_name">Registration Form</string>
        <string name="welcome">Welcome to Adventure Learning Club!</string>
        <string name="name">Full Name</string>
        <string name="first">First Name</string>
        <string name="last">Last Name</string>
        <string name="gender">Gender</string>
        <string name="male">Male</string>
        <string name="female">Female</string>
        <string name="id">Student ID</string>
        <string name="school">School</string>
        <string name="email">E-mail</string>
        <string name="phone">Phone</string>
</resources>